# satellite_rag

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
data/satdesign-rag-data/public_data_mvp/: parse_report.json  parse_report.md  scan_summary.json  scan_summary.md
data/satdesign-rag-data/public_data_mvp_pdf_clause_audit50/: parse_report.json  parse_report.json.bak_20260709_202154  parse_report.md  parse_report.md.bak_20260709_202154
data/satdesign-rag-data/public_data_mvp_pdf_clause_smoke/: parse_report.json  parse_report.md
data/satdesign-rag-data/public_data_mvp_pdf_smoke/: parse_report.json  parse_report.md
docs/: RAG_SYSTEM_DESIGN_CN.md  TEAM_GUIDE_CN.md
satellite_rag/: __init__.py  __main__.py  chunker.py  citations.py  cli.py  config.py  embeddings.py  env.py  factory.py  hyde.py  ingest.py  keyword_store.py  prepare.py  query_expansion.py  query_routing.py  reranker.py  retriever.py  scan.py  schemas.py  vector_store.py
satellite_rag/evaluation/: __init__.py  rag_eval.py
scripts/: check_litellm.py  evaluate_rag.py  generate_ecss_eval_set.py  ingest_corpus_qdrant.py  search_qdrant.py
tests/: test_env.py  test_litellm_config.py  test_rag_citations.py  test_rag_eval.py  test_rag_scan.py  test_recall.py
