[project]
name = "satellite-rag"
version = "0.1.0"
description = "Standalone satellite design RAG toolkit with Qdrant and LiteLLM support."
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "qdrant-client>=1.9",
  "openai>=1.0",
]

[project.optional-dependencies]
pdf = ["pypdf", "pdfplumber"]
local-models = ["FlagEmbedding", "torch", "transformers"]
elasticsearch = ["elasticsearch"]
dev = ["pytest"]

[project.scripts]
satellite-rag = "satellite_rag.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
